修复bug与文档更新
